tests/expectations/parser/serialize/parser_error.out
namespace = "Serialize"
expectation = "Fail"
outputs = ["""
Error [EPAR0370005]: expected 'import', 'program' -- found 'invalid'
    --> test:3:1
     |
   3 | invalid
     | ^^^^^^^"""]
